Fixing issue where url may not be encoded (#1249)